# bespin-pkg

./: CMakeLists.txt  INSTALL  PKGBUILD  REVISION  bepointer.h  bespin.cpp  bespin.h  bespin.pro  bespin.themerc  bespin_0.r1688.orig.tar.bz2.delta  bespin_0.r1688.orig.tar.bz2.id  builddeb.sh  buttons.cpp  colors.cpp  colors.h  config.defaults  config.h  configure  debug.h  docks.cpp  draw.h  drawcomplexcontrol.cpp  drawcontrol.cpp  drawprimitive.cpp  eventkiller.h  filedialog.cpp  frames.cpp  genpixmaps.cpp  gradients.cpp  gradients.h  hacks.cpp  hacks.h  indicators.cpp  init.cpp  inlinehelp.cpp  input.cpp  macmenu-dbus.h  macmenu.cpp  macmenu.h  makros.h  (+32 more)
XBar/: CMakeLists.txt  dbus.h  main.cpp  menubar.cpp  menubar.h  taskbar.cpp  taskbar.h  xbar.cpp  xbar.h
animator/: aprogress.cpp  aprogress.h  basic.cpp  basic.h  hover.cpp  hover.h  hovercomplex.cpp  hovercomplex.h  hoverindex.cpp  hoverindex.h  tab.cpp  tab.h
be.shadowed/: CMakeLists.txt  be.shadowed.cpp
blib/: CMakeLists.txt  FX.cpp  FX.h  WM.cpp  WM.h  colors.cpp  colors.h  dpi.cpp  dpi.h  elements.cpp  elements.h  fixx11h.h  gradients.cpp  gradients.h  shadows.cpp  shadows.h  shapes.cpp  shapes.h  tileset.cpp  tileset.h  xproperty.cpp  xproperty.h
bootsplash/: generate.sh  really README!
config/: CMakeLists.txt  bconfig.cpp  bconfig.h  bespin-config.pro  bespin.pro  bpp.cpp  bpp.h  config.cpp  config.h  config.pro  config.qrc  config.ui  dialog.h  kdeini.cpp  kdeini.h  kstyle-bespin-config.pro  main.cpp  uiDemo.ui
debian/: README.source  bespin-icon-theme.dirs  bespin-icon-theme.install  bespin.lintian  changelog  control  copyright  docs  kde-style-bespin.install  kde-style-bespin.lintian-overrides  kde-style-bespin.postinst  kdm-theme-aperture.install  kdm-theme-bespin.install  kdm-theme-tibanna.install  ksplash-theme-aperture.install  ksplash-theme-bespin.docs  ksplash-theme-bespin.install  ksplash-theme-tibanna.install  manpages  rules  watch
debian-upstream/: control
debian/.svn/: all-wcprops  entries
debian/patches/: fix-segfault-due-to-static-initialization-error  fix-spelling-errors  series
emerald/: README!  qwinbuttons.cpp  qwinbuttons.pro  theme.ini
extras/: README  bespin-compl  default-theme-clean.svg.bz2  default-theme.svg.bz2  kde_infopage.css
icons/: alias.README  alias.txt  ark.svgz  check_missing.sh  compressed-file-alt.svgz  compressed-pack-alt.svgz  config.example  digikam.svgz  dumb_icon_generator.sh  generate_kde_icons.sh  go-previous.alt76.svgz  icon-inventory.txt  kalculator.svgz  ng_generate_kde_icons.sh  node.alt3.svgz  start-here-alt4.svgz  start-here-alt5.svgz
kdm/: bespin.xml
kdm/aperture/: aperture.xml
ksplash/: Theme.rc  generate.sh
ksplash/aperture/: generate.sh
ksplash/bespin/: generate.sh
ksplash/tibanna/: generate.sh
kwin/: CMakeLists.txt  button.cpp  button.h  client.cpp  client.h  config.cpp  config.h  configdialog.ui  dbus.h  factory.cpp  factory.h  kwin.pro  resizecorner.cpp  resizecorner.h
man/: bespin.1
picturepusher/: bespinPP.pro  bpp.h  main.cpp
presets/: O2.bespin  alloy.bespin  aqua.bespin  avanti.bespin  bespin.bespin  bos_taurus.bespin  coruscant.bespin  default.bespin  elegance.bespin  itunes.bespin  itunes7.bespin  kamino.bespin  leopard.bespin  marble.bespin  matrix.bespin  milk.bespin  mjolk.bespin  mustafar.bespin  r2d2.bespin  screenshot.bespin  slate.bespin
